--- a/VeKa/Resourses/Storyboard/Base.lproj/Main.storyboard
+++ b/VeKa/Resourses/Storyboard/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Wje-Tj-gLp">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Wje-Tj-gLp">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -440,6 +440,7 @@
                         <segue destination="Udl-fH-LSl" kind="relationship" relationship="viewControllers" id="gmu-ic-ul2"/>
                         <segue destination="IeB-Lv-DMf" kind="relationship" relationship="viewControllers" id="yUM-rZ-P32"/>
                         <segue destination="UaS-Fn-k7D" kind="relationship" relationship="viewControllers" id="PHP-Fg-jlt"/>
+                        <segue destination="tdt-cQ-g1j" kind="relationship" relationship="viewControllers" id="bgp-oo-qXU"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5u7-Wb-GFD" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -875,8 +876,98 @@
             </objects>
             <point key="canvasLocation" x="1218.840579710145" y="762.72321428571422"/>
         </scene>
+        <!--Online Friends List View Controller-->
+        <scene sceneID="BeM-2u-acJ">
+            <objects>
+                <viewController id="P2s-ml-Hxf" customClass="OnlineFriendsListViewController" customModule="VeKa" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="voL-1g-ZIF">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="jSy-xx-my2">
+                                <rect key="frame" x="0.0" y="88" width="414" height="725"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="onlineFriendsList" id="Ss7-oM-OgL" customClass="OnlineFriendsListTableViewCell" customModule="VeKa" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Ss7-oM-OgL" id="Ssd-sy-34e">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HY1-9f-q8F">
+                                                    <rect key="frame" x="10" y="-0.5" width="42" height="44.5"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="44" id="Lt5-3r-Mes"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="S8z-aU-uwZ">
+                                                    <rect key="frame" x="344" y="-8.5" width="60" height="60.5"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="60" id="1HN-bg-AEJ"/>
+                                                        <constraint firstAttribute="width" secondItem="S8z-aU-uwZ" secondAttribute="height" multiplier="1:1" id="gzw-8t-hkA"/>
+                                                    </constraints>
+                                                </imageView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="S8z-aU-uwZ" secondAttribute="trailing" constant="10" id="142-9k-xkJ"/>
+                                                <constraint firstItem="S8z-aU-uwZ" firstAttribute="centerY" secondItem="HY1-9f-q8F" secondAttribute="centerY" id="1sh-BC-ppt"/>
+                                                <constraint firstItem="S8z-aU-uwZ" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="HY1-9f-q8F" secondAttribute="trailing" constant="20" id="8rJ-R9-zMT"/>
+                                                <constraint firstItem="HY1-9f-q8F" firstAttribute="leading" secondItem="Ssd-sy-34e" secondAttribute="leading" constant="10" id="gje-9k-Jbq"/>
+                                                <constraint firstItem="HY1-9f-q8F" firstAttribute="centerY" secondItem="Ssd-sy-34e" secondAttribute="centerY" id="mHp-gt-hYu"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="friendIcon" destination="S8z-aU-uwZ" id="6XL-gv-oNR"/>
+                                            <outlet property="friendNameLabel" destination="HY1-9f-q8F" id="hw2-kZ-fzb"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="MGD-4Z-91u" firstAttribute="trailing" secondItem="jSy-xx-my2" secondAttribute="trailing" id="Azp-xV-Ugg"/>
+                            <constraint firstItem="jSy-xx-my2" firstAttribute="top" secondItem="MGD-4Z-91u" secondAttribute="top" id="QON-DT-HSD"/>
+                            <constraint firstItem="MGD-4Z-91u" firstAttribute="bottom" secondItem="jSy-xx-my2" secondAttribute="bottom" id="j4f-ti-cUE"/>
+                            <constraint firstItem="jSy-xx-my2" firstAttribute="leading" secondItem="MGD-4Z-91u" secondAttribute="leading" id="z4n-mp-9C9"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="MGD-4Z-91u"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="4O8-nn-3v5"/>
+                    <connections>
+                        <outlet property="onlineFriendsListTable" destination="jSy-xx-my2" id="08W-r0-bac"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="mfy-iW-E7W" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2897.1014492753625" y="1102.2321428571429"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="rM8-CG-hOI">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="tdt-cQ-g1j" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="" image="antenna.radiowaves.left.and.right" catalog="system" id="dka-QA-Wef"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="jBu-Pi-78j">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="P2s-ml-Hxf" kind="relationship" relationship="rootViewController" id="5ay-fw-A6u"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="CLR-VW-eux" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1986.9565217391305" y="1101.5625"/>
+        </scene>
     </scenes>
     <resources>
+        <image name="antenna.radiowaves.left.and.right" catalog="system" width="64" height="54"/>
         <image name="news" width="33.333332061767578" height="33.333332061767578"/>
         <image name="person.3.fill" catalog="system" width="71" height="34"/>
         <image name="person.crop.square" catalog="system" width="64" height="56"/>
