--- a/VeKa/Resourses/Storyboard/Base.lproj/Main.storyboard
+++ b/VeKa/Resourses/Storyboard/Base.lproj/Main.storyboard
@@ -476,13 +476,13 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="10d-av-CkO" customClass="ShadowView" customModule="VeKa" customModuleProvider="target">
-                                                    <rect key="frame" x="352" y="10" width="52" height="52"/>
+                                                    <rect key="frame" x="348" y="8" width="56" height="56"/>
                                                     <subviews>
                                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6BE-Lf-mNP" customClass="AvatarView" customModule="VeKa" customModuleProvider="target">
-                                                            <rect key="frame" x="0.0" y="0.0" width="52" height="52"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="56" height="56"/>
                                                             <subviews>
                                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="MkO-ed-HpV">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="52" height="52"/>
+                                                                    <rect key="frame" x="0.0" y="0.0" width="56" height="56"/>
                                                                 </imageView>
                                                             </subviews>
                                                             <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
@@ -490,7 +490,6 @@
                                                                 <constraint firstItem="MkO-ed-HpV" firstAttribute="centerY" secondItem="6BE-Lf-mNP" secondAttribute="centerY" id="B6z-rD-m38"/>
                                                                 <constraint firstItem="MkO-ed-HpV" firstAttribute="centerX" secondItem="6BE-Lf-mNP" secondAttribute="centerX" id="KQG-t6-1sT"/>
                                                                 <constraint firstItem="MkO-ed-HpV" firstAttribute="height" secondItem="6BE-Lf-mNP" secondAttribute="height" id="VIg-Rd-Lvq"/>
-                                                                <constraint firstAttribute="width" secondItem="6BE-Lf-mNP" secondAttribute="height" multiplier="1:1" id="VKH-fS-ejq"/>
                                                                 <constraint firstItem="MkO-ed-HpV" firstAttribute="width" secondItem="6BE-Lf-mNP" secondAttribute="width" id="kP4-LC-zQb"/>
                                                             </constraints>
                                                         </view>
@@ -520,12 +519,12 @@
                                                 </view>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstAttribute="bottom" secondItem="10d-av-CkO" secondAttribute="bottom" constant="10" id="13l-NA-1mN"/>
                                                 <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="w66-0f-TyG" secondAttribute="trailing" constant="20" symbolic="YES" id="2Lp-qR-2af"/>
                                                 <constraint firstItem="w66-0f-TyG" firstAttribute="leading" secondItem="A2Y-4W-dnw" secondAttribute="leadingMargin" constant="10" id="Gy1-fp-zrc"/>
+                                                <constraint firstAttribute="bottom" secondItem="10d-av-CkO" secondAttribute="bottom" constant="8" id="RYz-gd-Mua"/>
                                                 <constraint firstAttribute="trailing" secondItem="10d-av-CkO" secondAttribute="trailing" constant="10" id="UK2-kR-6FJ"/>
                                                 <constraint firstItem="w66-0f-TyG" firstAttribute="centerY" secondItem="10d-av-CkO" secondAttribute="centerY" id="asx-9J-lXK"/>
-                                                <constraint firstItem="10d-av-CkO" firstAttribute="top" secondItem="A2Y-4W-dnw" secondAttribute="top" constant="10" id="lIL-sS-A1H"/>
+                                                <constraint firstItem="10d-av-CkO" firstAttribute="top" secondItem="A2Y-4W-dnw" secondAttribute="top" constant="8" id="w7H-2r-Auy"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
@@ -888,36 +887,47 @@
                                 <rect key="frame" x="0.0" y="88" width="414" height="725"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="onlineFriendsList" id="Ss7-oM-OgL" customClass="OnlineFriendsListTableViewCell" customModule="VeKa" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="onlineFriendsList" rowHeight="120" id="Ss7-oM-OgL" customClass="OnlineFriendsListTableViewCell" customModule="VeKa" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="120"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Ss7-oM-OgL" id="Ssd-sy-34e">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="120"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HY1-9f-q8F">
-                                                    <rect key="frame" x="10" y="-0.5" width="42" height="44.5"/>
+                                                    <rect key="frame" x="10" y="38" width="48" height="44"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="44" id="Lt5-3r-Mes"/>
                                                     </constraints>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="S8z-aU-uwZ">
-                                                    <rect key="frame" x="344" y="-8.5" width="60" height="60.5"/>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lqu-Ca-u4g" customClass="AvatarView" customModule="VeKa" customModuleProvider="target">
+                                                    <rect key="frame" x="282" y="8" width="104" height="104"/>
+                                                    <subviews>
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="S8z-aU-uwZ">
+                                                            <rect key="frame" x="0.0" y="0.0" width="104" height="104"/>
+                                                        </imageView>
+                                                    </subviews>
+                                                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="60" id="1HN-bg-AEJ"/>
-                                                        <constraint firstAttribute="width" secondItem="S8z-aU-uwZ" secondAttribute="height" multiplier="1:1" id="gzw-8t-hkA"/>
+                                                        <constraint firstAttribute="width" secondItem="lqu-Ca-u4g" secondAttribute="height" multiplier="1:1" id="2yo-d0-6jF"/>
+                                                        <constraint firstItem="S8z-aU-uwZ" firstAttribute="leading" secondItem="lqu-Ca-u4g" secondAttribute="leading" id="NIh-qC-EKX"/>
+                                                        <constraint firstItem="S8z-aU-uwZ" firstAttribute="top" secondItem="lqu-Ca-u4g" secondAttribute="top" id="UMo-vI-qX8"/>
+                                                        <constraint firstAttribute="trailing" secondItem="S8z-aU-uwZ" secondAttribute="trailing" id="UQi-qw-aac"/>
+                                                        <constraint firstAttribute="bottom" secondItem="S8z-aU-uwZ" secondAttribute="bottom" id="iyz-8c-Lpw"/>
                                                     </constraints>
-                                                </imageView>
+                                                </view>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstAttribute="trailing" secondItem="S8z-aU-uwZ" secondAttribute="trailing" constant="10" id="142-9k-xkJ"/>
-                                                <constraint firstItem="S8z-aU-uwZ" firstAttribute="centerY" secondItem="HY1-9f-q8F" secondAttribute="centerY" id="1sh-BC-ppt"/>
-                                                <constraint firstItem="S8z-aU-uwZ" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="HY1-9f-q8F" secondAttribute="trailing" constant="20" id="8rJ-R9-zMT"/>
+                                                <constraint firstItem="lqu-Ca-u4g" firstAttribute="top" secondItem="Ssd-sy-34e" secondAttribute="top" constant="8" id="3zc-oy-ymP"/>
+                                                <constraint firstAttribute="bottom" secondItem="lqu-Ca-u4g" secondAttribute="bottom" constant="8" id="87D-MU-Nuu"/>
+                                                <constraint firstItem="lqu-Ca-u4g" firstAttribute="centerY" secondItem="HY1-9f-q8F" secondAttribute="centerY" id="Rkl-rU-NnH"/>
                                                 <constraint firstItem="HY1-9f-q8F" firstAttribute="leading" secondItem="Ssd-sy-34e" secondAttribute="leading" constant="10" id="gje-9k-Jbq"/>
+                                                <constraint firstItem="lqu-Ca-u4g" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="HY1-9f-q8F" secondAttribute="trailing" constant="10" id="ilc-hB-Zda"/>
                                                 <constraint firstItem="HY1-9f-q8F" firstAttribute="centerY" secondItem="Ssd-sy-34e" secondAttribute="centerY" id="mHp-gt-hYu"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="lqu-Ca-u4g" secondAttribute="trailing" constant="8" id="olQ-c3-PGZ"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
